yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerberos-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kerberos-vault
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kerberos-vault
    spec:
      containers:
      - name: kerberos-vault
        image: kerberos/vault:1.0.505032724
        #imagePullPolicy: Always
        resources:
          limits:
            memory: 1024Mi
        ports:
          - containerPort: 80
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kerberos-vault
  labels:
    app: kerberos-vault
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  - port: 8081
    name: backend
    targetPort: 8081
    protocol: TCP
  selector:
    app: kerberos-vault
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kerberos-vault
  annotations:
    kubernetes.io/ingress.class: traefik
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  rules:
    - host: vault.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kerberos-vault
                port:
                  number: 80
    - host: api.vault.domain.com #myvaultapi-storagedomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kerberos-vault
                port:
                  number: 8081
