yaml/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerberos-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kerberos-storage
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kerberos-storage
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
      - name: kerberos-storage
        image: kerberos/storage:1.0.0
        ports:
          - containerPort: 80
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kerberos-storage
  labels:
    app: kerberos-storage
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  - port: 8081
    name: backend
    targetPort: 8081
    protocol: TCP
  selector:
    app: kerberos-storage
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kerberos-storage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: storage.yourdomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kerberos-storage
          servicePort: 80
  - host: api.storage.yourdomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kerberos-storage
          servicePort: 8081
